--- a/musicforum/package.json
+++ b/musicforum/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "vee-validate": "^4.5.11",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.1",
     "vue-router": "^3.5.1",
