刘梓池 后端完成用户setting服务---对应前端何梓欣

--- a/musicforum_back/musicforum/src/main/resources/application.yaml
+++ b/musicforum_back/musicforum/src/main/resources/application.yaml
@@ -1,6 +1,11 @@
 server:
-  port: 80
+  port: 8081
+
 spring:
+  #配置时区
+  jackson:
+    time-zone: GMT+8
+    date-format: yyyy-MM-dd HH:mm:ss
   # 配置数据源信息
   datasource:
     # 配置数据源类型
@@ -16,8 +21,8 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 user:
   # 默认头像地址
-  default-avator: music/photo/avator/default
-  avator-parent-path: music/photo/avator/
+  default-avatar: music/photo/avator/default
+  avatar-parent-path: music/photo/avator/
 music:
   # 音频相关父路径
   local-storage-parent-path: /home/music/storage/
